--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "bulma": "^0.9.4",
+    "firebase": "^9.10.0",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
   },
