--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
+    "axios": "^1.1.0",
     "bulma": "^0.9.4",
     "firebase": "^9.10.0",
     "vue": "^3.2.38",
+    "vue-axios": "^3.4.1",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
