--- a/package.json
+++ b/package.json
@@ -7,18 +7,18 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
-    "axios": "^1.1.0",
+    "axios": "^1.1.2",
     "bulma": "^0.9.4",
-    "firebase": "^9.10.0",
+    "tailwindcss": "^3.1.8",
     "vue": "^3.2.38",
     "vue-axios": "^3.4.1",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8",
     "vite": "^3.0.9"
   }
 }
