--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.1.2",
     "bulma": "^0.9.4",
     "tailwindcss": "^3.1.8",
+    "uuid": "^9.0.0",
     "vue": "^3.2.38",
     "vue-axios": "^3.4.1",
     "vue-router": "^4.1.5",
