--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^3.2.38",
     "vue-axios": "^3.4.1",
     "vue-router": "^4.1.5",
+    "vueperslides": "^3.4.2",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
