--- a/package.json
+++ b/package.json
@@ -1,26 +1,24 @@
 {
-  "name": "btgk",
+  "name": "tranquochung-501210025",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --port 4173"
+    "preview": "vite preview --port 4173",
+    "db": "json-server --watch db.json"
   },
   "dependencies": {
     "axios": "^1.1.2",
-    "bulma": "^0.9.4",
-    "tailwindcss": "^3.1.8",
-    "uuid": "^9.0.0",
+    "bootstrap": "^5.2.2",
+    "owl.carousel": "^2.3.4",
     "vue": "^3.2.38",
     "vue-axios": "^3.4.1",
+    "vue-bootstrap-pagination": "^2.10.3",
     "vue-router": "^4.1.5",
-    "vueperslides": "^3.4.2",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
-    "autoprefixer": "^10.4.12",
-    "postcss": "^8.4.16",
     "vite": "^3.0.9"
   }
 }
