--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.1.2",
     "bootstrap": "^5.2.2",
     "owl.carousel": "^2.3.4",
+    "sweetalert": "^2.1.2",
     "vue": "^3.2.38",
     "vue-axios": "^3.4.1",
     "vue-bootstrap-pagination": "^2.10.3",
