--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --port 4173",
-    "db": "json-server --watch db.json"
+    "db": "json-server-auth --watch db.json"
   },
   "dependencies": {
     "axios": "^1.1.2",
