--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue": "^3.2.38",
     "vue-axios": "^3.4.1",
     "vue-bootstrap-pagination": "^2.10.3",
+    "vue-cookies": "^1.8.1",
     "vue-router": "^4.1.5",
     "vuex": "^4.0.2"
   },
